# project_management

./: .dockerignore  .env.example  .env.localstack  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AWS_DEPLOYMENT.md  AWS_FULL_DEPLOYMENT.md  CLOUD_DEPLOYMENT_STATUS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FARGATE_VS_EC2.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_SETUP.md  GAP_ANALYSIS.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  Makefile  ProjectManagementAPI.postman_collection.json  QUICK_REFERENCE.md  README.md  SETUP.md  case_requirements.txt  coverage.xml  deploy-frontend.bat  deploy-frontend.sh  docker-compose.localstack.yml  docker-compose.yml  iam-policy-frontend.json  lambda_function.py  lambda_requirements.txt  package.json  package_lambda.bat  package_lambda.sh  pyproject.toml  requirements-dev.txt  requirements.txt  start-dev.bat  (+2 more)
.github/: SECRETS.md
.github/workflows/: ci-cd.yml  deploy-frontend.yml
alembic/: env.py
alembic/versions/: add_email_to_user.py  add_invite_tokens_table.py  fix_foreign_keys.py  (+1 more)
app/: main.py
frontend/: .env.production  COMPONENT_TREE.md  README.md  nginx.conf  package-lock.json  package.json
terraform/: frontend.tf  main.tf  terraform.tfvars.example  terraform.tfvars.template  variables.tf
tests/: conftest.py  test_access_control.py  test_auth.py  test_database.py  test_documents.py  test_domain_document.py  test_domain_project.py  test_domain_storage.py  test_domain_user.py  test_edge_cases.py  test_invitations.py  test_lambda_image_resize.py  test_projects.py  test_security.py
(+46 files in other folders)
